syntax = "proto3";

package franchise;

option go_package = "./services/franchise/pb";

service FranchiseService {
  rpc CreateFranchise(CreateFranchiseRequest) returns (CreateFranchiseResponse) {}
}

message CreateFranchiseRequest {
  int64 productId = 1;
  int64 quantity = 2;
  int64 userId = 3;
}

message CreateFranchiseResponse {
  int64 status = 1;
  string error = 2;
  int64 id = 3;
}